[gd_scene load_steps=5 format=2]

[ext_resource path="res://Images/DefaultBackground.jpg" type="Texture" id=1]
[ext_resource path="res://Dialogue.gd" type="Script" id=2]
[ext_resource path="res://Images/humanoutlin.png" type="Texture" id=3]
[ext_resource path="res://Controller.gd" type="Script" id=4]

[node name="DycerLyfe" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 645, 367 )
scale = Vector2( 0.67, 0.67 )
texture = ExtResource( 1 )

[node name="CharacterPosition" type="Position2D" parent="."]
position = Vector2( 640, 300 )

[node name="Encounter1" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Encounter2" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="Humanoutlin" type="Sprite" parent="Control"]
visible = false
position = Vector2( 548, 286.75 )
scale = Vector2( 0.679878, 0.632705 )
texture = ExtResource( 3 )

[node name="TextBox" type="ColorRect" parent="Control"]
margin_left = 38.0
margin_top = 456.0
margin_right = 1003.0
margin_bottom = 726.0
color = Color( 0.403922, 0.372549, 0.372549, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Control/TextBox"]
margin_left = 30.0
margin_top = 42.0
margin_right = 895.0
margin_bottom = 73.0

[node name="Tween" type="Tween" parent="Control/TextBox"]

[node name="dialogue_option_1" type="Button" parent="Control/TextBox" groups=["dialogue_options"]]
visible = false
margin_left = 119.0
margin_top = 68.0
margin_right = 770.0
margin_bottom = 99.0

[node name="dialogue_option_2" type="Button" parent="Control/TextBox" groups=["dialogue_options"]]
visible = false
margin_left = 120.0
margin_top = 103.0
margin_right = 773.0
margin_bottom = 134.0

[node name="dialogue_option_3" type="Button" parent="Control/TextBox" groups=["dialogue_options"]]
visible = false
margin_left = 118.0
margin_top = 131.0
margin_right = 758.0
margin_bottom = 164.0

[node name="dialogue_option_4" type="Button" parent="Control/TextBox" groups=["dialogue_options"]]
visible = false
margin_left = 117.0
margin_top = 170.0
margin_right = 772.0
margin_bottom = 204.0

[node name="StartScreen" type="Panel" parent="."]
margin_left = -17.0
margin_top = -8.0
margin_right = 1287.0
margin_bottom = 755.0

[node name="Button" type="Button" parent="StartScreen"]
margin_left = 549.0
margin_top = 297.0
margin_right = 742.0
margin_bottom = 340.0
text = "Start Game"

[node name="ShowCredits" type="Button" parent="StartScreen"]
margin_left = 546.0
margin_top = 599.0
margin_right = 741.0
margin_bottom = 655.0
text = "View Credits"

[node name="CreditsScreen" type="ColorRect" parent="."]
visible = false
anchor_bottom = 1.0
margin_left = 38.0
margin_top = 30.0
margin_right = 1224.0
margin_bottom = 696.0
color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="Label" type="Label" parent="CreditsScreen"]
margin_left = 503.0
margin_top = 101.0
margin_right = 615.0
margin_bottom = 145.0
size_flags_horizontal = 0
custom_colors/font_color = Color( 0.952941, 0.917647, 0.917647, 1 )
text = "Credits Page"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="CreditsScreen"]
margin_left = 128.0
margin_top = 50.0
margin_right = 1016.0
margin_bottom = 521.0

[node name="CloseCreditsButton" type="Button" parent="CreditsScreen"]
margin_left = 498.0
margin_top = 586.0
margin_right = 632.0
margin_bottom = 621.0
text = "Close Credits"

[connection signal="tween_completed" from="Control/TextBox/Tween" to="Control" method="_on_Tween_tween_completed"]
[connection signal="pressed" from="Control/TextBox/dialogue_option_1" to="Control" method="_on_dialogue_option_1_pressed"]
[connection signal="pressed" from="Control/TextBox/dialogue_option_2" to="Control" method="_on_dialogue_option_2_pressed"]
[connection signal="pressed" from="Control/TextBox/dialogue_option_3" to="Control" method="_on_dialogue_option_3_pressed"]
[connection signal="pressed" from="Control/TextBox/dialogue_option_4" to="Control" method="_on_dialogue_option_4_pressed"]
[connection signal="pressed" from="StartScreen/Button" to="Control" method="_on_Button_pressed"]
[connection signal="pressed" from="StartScreen/ShowCredits" to="Control" method="_on_ShowCredits_pressed"]
[connection signal="pressed" from="CreditsScreen/CloseCreditsButton" to="Control" method="_on_CloseCreditsButton_pressed"]
